fix match alignment

--- a/synth-search/src/components/SearchResults/SearchResults.module.sass
+++ b/synth-search/src/components/SearchResults/SearchResults.module.sass
@@ -69,6 +69,6 @@
 
 .topMatchesItem
     display: flex
-    align-items: center
+    align-items: flex-start
     gap: 0.75rem
     margin-bottom: 0.75rem
